--- a/contact.html
+++ b/contact.html
@@ -309,7 +309,7 @@
                                         <h6 class="widget-title">Services</h6>
                                         <ul class="footer-menu list-unstyled">
                                             <li><a href="service.html#secstion1">Event Security</a></li>
-                                            <li><a href="service.html#section2">Professional Bouncers</a></li>
+                                            <li><a href="service.html#section2">Professional Event Stewards</a></li>
                                             <li><a href="service.html#section3">Ushering Services</a></li>
                                             <li><a href="service.html#section4">Protocol & Guides</a></li>
                                             <li><a href="service.html#section5">Corporate Security</a></li>
