--- a/index.htm
+++ b/index.htm
@@ -284,8 +284,8 @@ and Social Media services in Kigali, Rwanda. ">
                                 <img src="icon/icon-2.gif" alt="icon">
                             </div>
                             <div class="content">
-                                <h5 class="title"> <a href='service.html'>Professional Bouncers</a></h5>
-                                <p>Our skilled bouncers maintain order and enforce venue rules while creating a safe, welcoming environment for all.</p>
+                                <h5 class="title"> <a href='service.html'>Professional Event Stewards</a></h5>
+                                <p>Our skilled Stewards maintain order and enforce venue rules while creating a safe, welcoming environment for all.</p>
                                 <a class='more-btn' href='service.html'>Find out more</a>
                             </div>
                         </div>
@@ -1011,7 +1011,7 @@ and Social Media services in Kigali, Rwanda. ">
                                         <div class="footer-menu-link">
                                             <ul class="list-unstyled">
                                                 <li><a href="service.html#secstion1">Event Security Services</a></li>
-                                                <li><a href="service.html#section2">Professional Bouncers</a></li>
+                                                <li><a href="service.html#section2">Professional Event Stewards</a></li>
                                                 <li><a href="service.html#section3">Ushering & Liaison Services</a></li>
                                                 <li><a href="service.html#section4">Protocol & Guide Services </a></li>
                                                 <li><a href="service.html#section5">Corporate and Private Security</a></li>
