--- a/portfolio-2.html
+++ b/portfolio-2.html
@@ -522,7 +522,7 @@
                                                 Our Contributions
                                             </strong>
                                               <br> <b> Event Security Services:</b> Delivered a comprehensive safety framework, ensuring the smooth execution of matches without incidents.
-                                            <br> <b>Professional Bouncers: </b>  Positioned strategically to handle access points and maintain order during high-pressure moments.
+                                            <br> <b>Professional Event Stewards: </b>  Positioned strategically to handle access points and maintain order during high-pressure moments.
                                             <br><b>Ushering & Liaison Services: </b>Directed attendees efficiently to their designated areas and coordinated with event organizers for real-time updates.
                                             <br><b>Protocol & Guide Services: </b>Facilitated VIP entries, player movements, and dignitary engagements.
                                             <br><b>Emergency Support: </b> Maintained a rapid response team ready for any contingency, ensuring safety and confidence for all stakeholders. 
@@ -681,7 +681,7 @@
                                                 Our Contributions
                                             </strong>
                                               <br> <b> Event Security Services:</b>Provided top-notch security measures to protect guests and ensure smooth operations in every part of the event.
-                                            <br> <b>Professional Bouncers: </b> Strategically placed to control access points and ensure that all areas were secure and well-managed.
+                                            <br> <b>Professional Event Stewards: </b> Strategically placed to control access points and ensure that all areas were secure and well-managed.
                                             <br><b>Ushering & Liaison Services: </b> Assisted attendees, including media representatives and VIP guests, in navigating the venue effortlessly.
                                             <br><b>Protocol & Guide Services: </b> Managed VIP and dignitary movements with care, ensuring an exceptional experience for all attendees.
                                             <br><b>Emergency Support: </b> Maintained a rapid-response team on-site, ensuring all risks were mitigated effectively.
@@ -825,7 +825,7 @@
                                                     Our Contributions
                                                 </strong>
                                                 <br> <b> Event Security Services:</b>We ensured a safe and secure environment for all attendees, fostering peace of mind throughout the conference.
-                                                <br> <b>Professional Bouncers: </b> Deployed to maintain orderly entrance flows and assist with crowd management in high-traffic areas.
+                                                <br> <b>Professional Event Stewards: </b> Deployed to maintain orderly entrance flows and assist with crowd management in high-traffic areas.
                                                 <br><b>Ushering & Liaison Services: </b> Assisted participants in navigating the venue and seating arrangements, ensuring ease and comfort.
                                                 <br><b>Protocol & Guide Services: </b> Coordinated speaker transitions and VIP handling with precision, ensuring all sessions started and ended seamlessly.
                                                 <br><b>Emergency Support: </b>  Our on-site team was fully prepared to handle any emergencies, ensuring uninterrupted worship and prayer sessions.
@@ -961,7 +961,7 @@
                                                 Our Contributions
                                             </strong>
                                               <br> <b> Event Security Services:</b> Ensured secure venues and seamless access for all attendees, with zero incidents reported.
-                                            <br> <b>Professional Bouncers: </b> Maintained order across multiple access points, managing high-profile VIP entries.
+                                            <br> <b>Professional Event Stewards: </b> Maintained order across multiple access points, managing high-profile VIP entries.
                                             <br><b>Ushering & Liaison Services: </b>Guided attendees and offered real-time assistance for smooth participation.
                                             <br><b>Protocol & Guide Services: </b>Provided culturally appropriate protocol services to delegates from diverse regions.
                                             <br><b>Emergency Support: </b> A dedicated response team was on standby, ready to manage any unexpected situations.
@@ -1100,7 +1100,7 @@
                                                 Our Contributions
                                             </strong>
                                               <br> <b> Event Security Services:</b> Ensured a secure environment for all attendees, safeguarding the forum’s dynamic and collaborative atmosphere.
-                                            <br> <b>Professional Bouncers: </b>  Maintained order and controlled access to restricted areas, ensuring seamless operation.
+                                            <br> <b>Professional Event Stewards: </b>  Maintained order and controlled access to restricted areas, ensuring seamless operation.
                                             <br><b>Ushering & Liaison Services: </b>  Guided participants through various venues and sessions with precision, minimizing delays and confusion.
                                             <br><b>Protocol & Guide Services: </b>   Facilitated interactions between VIPs, speakers, and participants, ensuring a professional and respectful experience.
                                             <br><b>Emergency Support: </b> A dedicated team was on-site to address any unforeseen circumstances, ensuring the event’s continuity without disruption.
@@ -1248,7 +1248,7 @@
                                             Our Contributions
                                         </strong>
                                           <br> <b> Event Security Services:</b>  Delivered a comprehensive security plan to safeguard all participants and ensure the event’s smooth execution.
-                                        <br> <b>Professional Bouncers: </b> Positioned at critical access points to handle crowd management and maintain order.
+                                        <br> <b>Professional Event Stewards: </b> Positioned at critical access points to handle crowd management and maintain order.
                                         <br><b>Ushering & Liaison Services: </b> Directed attendees to their sessions and provided real-time assistance to organizers for seamless event flow.
                                         <br><b>Protocol & Guide Services: </b> Managed VIP entries and transitions, respecting cultural nuances and expectations for high-profile delegates.
                                         <br><b>Emergency Support: </b>Maintained a ready response team to address any emergencies, ensuring an uninterrupted and safe experience for all.
@@ -1400,7 +1400,7 @@
                                             Our Contributions
                                         </strong>
                                           <br> <b> Event Security Services:</b>Ensured a secure environment for all attendees, including performers, VIPs, and media personnel.
-                                        <br> <b>Professional Bouncers: </b> Maintained order and controlled access at key entry points and high-traffic areas.
+                                        <br> <b>Professional Event Stewards: </b> Maintained order and controlled access at key entry points and high-traffic areas.
                                         <br><b>Ushering & Liaison Services: </b>Guided attendees to their designated areas and provided real-time assistance to event organizers.
                                         <br><b>Protocol & Guide Services: </b> Managed VIP arrivals and transitions, ensuring a polished experience for celebrities and dignitaries.
                                         <br><b>Emergency Support: </b>Our team was on standby to address any emergencies, ensuring the event proceeded without disruption.
@@ -1549,7 +1549,7 @@
                                             Our Contributions
                                         </strong>
                                           <br> <b> Event Security Services:</b>   Delivered top-notch security to protect the integrity of the venue and ensure confidentiality.
-                                        <br> <b>Professional Bouncers: </b>  Strategically managed access points to control media and attendee flow.
+                                        <br> <b>Professional Event Stewards: </b>  Strategically managed access points to control media and attendee flow.
                                         <br><b>Ushering & Liaison Services: </b> Facilitated the smooth movement of attendees and ensured efficient seating arrangements.
                                         <br><b>Protocol & Guide Services: </b>Managed VIP entries and cultural etiquette for international guests.
                                         <br><b>Emergency Support: </b> Maintained readiness to handle any unexpected situations, ensuring uninterrupted proceedings.
@@ -1695,7 +1695,7 @@
                                             Our Contributions
                                         </strong>
                                           <br> <b> Event Security Services:</b> mplemented comprehensive security measures to safeguard attendees, including dignitaries and VIPs.
-                                        <br> <b>Professional Bouncers: </b>  Controlled access points and maintained order throughout the event.
+                                        <br> <b>Professional Event Stewards: </b>  Controlled access points and maintained order throughout the event.
                                         <br><b>Ushering & Liaison Services: </b> Assisted guests in navigating the venue, ensuring a welcoming and organized experience.
                                         <br><b>Protocol & Guide Services: </b>  Coordinated the arrival and seating of VIP guests, adhering to formal protocols.
                                         <br><b>Emergency Support: </b>Maintained readiness to address any unforeseen situations, ensuring the event proceeded without interruption.
@@ -1838,7 +1838,7 @@
                                             Our Contributions
                                         </strong>
                                           <br> <b> Event Security Services:</b> Developed and executed a robust security plan to protect attendees and performers.
-                                        <br> <b>Professional Bouncers: </b>   Monitored entry points and maintained crowd control to ensure a safe environment.
+                                        <br> <b>Professional Event Stewards: </b>   Monitored entry points and maintained crowd control to ensure a safe environment.
                                         <br><b>Ushering & Liaison Services: </b> Guided guests to their seats and provided assistance throughout the event.
                                         <br><b>Protocol & Guide Services: </b>  Facilitated the smooth arrival and departure of the artist and VIP guests.
                                         <br><b>Emergency Support: </b>Prepared to handle any emergencies, ensuring the concert proceeded without disruptions.
@@ -2011,7 +2011,7 @@
                                             Our Contributions
                                         </strong>
                                           <br> <b> Event Security Services:</b>  Developed and implemented a comprehensive security plan to ensure the safety of all participants.
-                                        <br> <b>Professional Bouncers: </b> Managed crowd control and access points to maintain order throughout the event.
+                                        <br> <b>Professional Event Stewards: </b> Managed crowd control and access points to maintain order throughout the event.
                                         <br><b>Ushering & Liaison Services: </b>Assisted guests with seating and provided information to enhance their experience.
                                         <br><b>Protocol & Guide Services: </b>Coordinated with artists and VIP guests to ensure smooth transitions and adherence to the event schedule.
                                         <br><b>Emergency Support: </b> Maintained readiness to address any unforeseen incidents, ensuring the event proceeded without disruptions.
@@ -2161,7 +2161,7 @@
                                 <strong>Our Contributions</strong>
                                 <ul>
                                     <li><b>Event Security Services:</b> Implemented a comprehensive security plan to ensure a safe environment for all attendees.</li>
-                                    <li><b>Professional Bouncers:</b> Managed crowd control and access points to prevent overcrowding and maintain order.</li>
+                                    <li><b>Professional Event Stewards:</b> Managed crowd control and access points to prevent overcrowding and maintain order.</li>
                                     <li><b>Ushering & Liaison Services:</b> Assisted guests with seating and provided information to enhance their experience.</li>
                                     <li><b>Protocol & Guide Services:</b> Coordinated with performers and VIP guests to ensure smooth transitions and adherence to the event schedule.</li>
                                     <li><b>Emergency Support:</b> Maintained readiness to address any unforeseen incidents, ensuring the event proceeded without disruptions.</li>
@@ -2250,7 +2250,7 @@
                                     Our Contributions
                                 </strong>
                                   <br> <b> Event Security Services:</b>  Ensured the safety of all attendees through meticulous planning and coordination.
-                                <br> <b>Professional Bouncers: Controlled access points and maintained order during the event.
+                                <br> <b>Professional Event Stewards: Controlled access points and maintained order during the event.
                                 <br><b>Ushering & Liaison Services: Guided guests to their seats and provided assistance as needed.
                                 <br><b>Protocol & Guide Services: Facilitated smooth interactions between international artists and local organizers.
                                 <br><b>Emergency Support: </b>Remained prepared to handle any emergencies, ensuring an uninterrupted worship experience. <br> <br> <br>
@@ -2403,7 +2403,7 @@
                                     Our Contributions
                                 </strong>
                                   <br> <b> Event Security Services:</b>  Developed and implemented a comprehensive security plan to ensure the safety of all participants throughout the night.
-                                <br> <b>Professional Bouncers:  Managed crowd control, facilitated orderly entry and exit, and maintained a peaceful environment.
+                                <br> <b>Professional Event Stewards:  Managed crowd control, facilitated orderly entry and exit, and maintained a peaceful environment.
                                 <br><b>Ushering & Liaison Services:  Assisted attendees with seating arrangements, provided information, and ensured comfort during the extended service hours.
                                 <br><b>Protocol & Guide Services:Coordinated with church leaders and special guests to ensure smooth transitions between different segments of the program.
                                 <br><b>Emergency Support: </b> Maintained readiness to address any unforeseen incidents, ensuring the event proceeded without disruptions. <br> <br> <br>
@@ -2517,7 +2517,7 @@
                                       Our Contributions
                                   </strong>
                                     <br> <b> Event Security Services:</b>  Developed and implemented a comprehensive security plan to ensure the safety of all participants.
-                                  <br> <b>Professional Bouncers:</b> Controlled access points and managed crowd movement, maintaining order throughout the event.
+                                  <br> <b>Professional Event Stewards:</b> Controlled access points and managed crowd movement, maintaining order throughout the event.
                                   <br><b>Ushering & Liaison Services:</b>  Assisted attendees with seating and provided guidance to ensure a smooth experience.
                                   <br><b>Protocol & Guide Services: </b>Coordinated artist arrivals and transitions, ensuring a seamless and professional atmosphere.
                                   <br><b>Emergency Support: </b> Maintained on-site readiness to address any potential emergencies, ensuring the event proceeded without interruptions. <br> <br> <br>
@@ -2730,7 +2730,7 @@
                                       <h6 class="widget-title">Services</h6>
                                       <ul class="footer-menu list-unstyled">
                                           <li><a href="service.html#secstion1">Event Security</a></li>
-                                          <li><a href="service.html#section2">Professional Bouncers</a></li>
+                                          <li><a href="service.html#section2">Professional Event Stewards</a></li>
                                           <li><a href="service.html#section3">Ushering Services</a></li>
                                           <li><a href="service.html#section4">Protocol & Guides</a></li>
                                           <li><a href="service.html#section5">Corporate Security</a></li>
