--- a/pricing-table.html
+++ b/pricing-table.html
@@ -511,7 +511,7 @@
                                         <div class="footer-menu-link">
                                             <ul class="list-unstyled">
                                                 <li><a href="service.html#secstion1">Event Security Services</a></li>
-                                                <li><a href="service.html#section2">Professional Bouncers</a></li>
+                                                <li><a href="service.html#section2">Professional Event Stewards</a></li>
                                                 <li><a href="service.html#section3">Ushering & Liaison Services</a></li>
                                                 <li><a href="service.html#section4">Protocol & Guide Services </a></li>
                                                 <li><a href="service.html#section5">Corporate and Private Security</a></li>
