--- a/service.html
+++ b/service.html
@@ -167,10 +167,6 @@
             <div class="container">
                 <div class="section-heading heading-left" data-sal="slide-right" data-sal-duration="1000" data-sal-delay="300">
                     <h1 class="title h2">Best Solutions for Your Security and Protocol Needs</h1>
-                    <p>At Crowd Minders, we combine top-tier security and protocol services to provide comprehensive solutions tailored to your needs. Our team of experienced professionals works diligently to align our strategies with your vision and values, ensuring safety, organization, and seamless execution. From protecting high-profile events to managing VIP protocols, we empower you with the tools and confidence to achieve your goals while maintaining the utmost professionalism and discretion. Trust us to handle every detail with precision and care.</p>
-                </div>
-                <div class="banner-thumbnail" data-sal="slide-up" data-sal-duration="1000" data-sal-delay="400">
-                    <img class="paralax-image" src="banner/banner-thumb-4.png" alt="Illustration">
                 </div>
             </div>
             <ul class="shape-group-8 list-unstyled">
@@ -197,7 +193,7 @@
                             <a class="nav-link" href="#section1">Event Security</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#section2">Professional Bouncers</a>
+                            <a class="nav-link" href="#section2">Professional Event Stewards</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#section3">Ushering and Liaison Services</a>
@@ -205,9 +201,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#section4">VIP Protocol & Guide Services</a>
                         </li>
-                        <li class="nav-item">
+                        <!-- <li class="nav-item">
                             <a class="nav-link" href="#section5">Corporate & Private Security</a>
-                        </li>
+                        </li> -->
                         <li class="nav-item">
                             <a class="nav-link" href="#section6">Emergency Response Teams</a>
                         </li>
@@ -292,7 +288,7 @@
                 <div class="container">
                     <div class="section-heading heading-left">
                         <span class="subtitle">Service</span>
-                        <h2 class="title">Professional Bouncers</h2>
+                        <h2 class="title">Professional Event Stewards</h2>
                     </div>
                     <div class="row">
                         <div class="col-lg-4 col-md-6" data-sal="slide-up" data-sal-duration="800" data-sal-delay="100">
@@ -302,7 +298,7 @@
                                 </div>
                                 <div class="content">
                                     <h5 class="title"> <a href="javascript:void(0)"> Professional Crowd Management</a></h5>
-                                    <p>Our bouncers are skilled in maintaining order and ensuring only authorized individuals access your event.</p>
+                                    <p>Our Stewards are skilled in maintaining order and ensuring only authorized individuals access your event.</p>
                                     
                                 </div>
                             </div>
@@ -469,7 +465,7 @@
 
             <!-- Technology Service  -->
 
-             <div class="section section-padding" id="section5">
+             <!-- <div class="section section-padding" id="section5">
                 <div class="container">
                     <div class="section-heading heading-left">
                         <span class="subtitle">Service</span>
@@ -484,7 +480,6 @@
                                 <div class="content">
                                     <h5 class="title"> <a href="#Crowd-minders-Protocal">Advanced Threat Analysis</a></h5>
                                     <p>We assess potential risks and create customized, fail-safe security strategies that give you peace of mind.</p>
-                                    <!-- <a href="#Crowd-minders-Protocal" class="more-btn">Find out more</a> -->
                                 </div>
                             </div>
                         </div>
@@ -496,7 +491,6 @@
                                 <div class="content">
                                     <h5 class="title"> <a href="#Crowd-minders-Protocal">Highly Trained Guards</a></h5>
                                     <p>Our professional personnel provide unwavering protection, demonstrating vigilance and courtesy 24/7.</p>
-                                    <!-- <a href="service-technology.html" class="more-btn">Find out more</a> -->
                                 </div>
                             </div>
                         </div>
@@ -515,7 +509,8 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
+          
             <!-- Content strategy Service -->
             <div class="section section-padding bg-color-light" id="section6">
                 <div class="container">
@@ -632,7 +627,7 @@
                                         <h6 class="widget-title">Services</h6>
                                         <ul class="footer-menu list-unstyled">
                                             <li><a href="service.html#secstion1">Event Security</a></li>
-                                            <li><a href="service.html#section2">Professional Bouncers</a></li>
+                                            <li><a href="service.html#section2">Professional Event Stewards</a></li>
                                             <li><a href="service.html#section3">Ushering Services</a></li>
                                             <li><a href="service.html#section4">Protocol & Guides</a></li>
                                             <li><a href="service.html#section5">Corporate Security</a></li>
