--- a/index.html
+++ b/index.html
@@ -284,8 +284,8 @@ and Social Media services in Kigali, Rwanda. ">
                                 <img src="icon/icon-2.gif" alt="icon">
                             </div>
                             <div class="content">
-                                <h5 class="title"> <a href='service.html'>Professional Bouncers</a></h5>
-                                <p>Our skilled bouncers maintain order and enforce venue rules while creating a safe, welcoming environment for all.</p>
+                                <h5 class="title"> <a href='service.html'>Professional Event Stewards</a></h5>
+                                <p>Our skilled Stewards maintain order and enforce venue rules while creating a safe, welcoming environment for all.</p>
                                 <a class='more-btn' href='service.html'>Find out more</a>
                             </div>
                         </div>
@@ -1098,7 +1098,7 @@ and Social Media services in Kigali, Rwanda. ">
                                         <h6 class="widget-title">Services</h6>
                                         <ul class="footer-menu list-unstyled">
                                             <li><a href="service.html#secstion1">Event Security</a></li>
-                                            <li><a href="service.html#section2">Professional Bouncers</a></li>
+                                            <li><a href="service.html#section2">Professional Event Stewards</a></li>
                                             <li><a href="service.html#section3">Ushering Services</a></li>
                                             <li><a href="service.html#section4">Protocol & Guides</a></li>
                                             <li><a href="service.html#section5">Corporate Security</a></li>
