--- a/contact.html
+++ b/contact.html
@@ -193,7 +193,7 @@
                 <div class="row">
                     <div class="col-xl-5 col-lg-6">
                         <div class="contact-form-box shadow-box mb--30">
-                            <b class="title">Ready to Stay Safe?—Request a Free Crowd-Minders Consultation!</b>
+                            <b class="title">Request a Free Crowd-Minders Consultation!</b>
                             <form action="https://formbold.com/s/ozZmp" method="POST" class="axil-contact-form" id="my-form">
                                 <div class="form-group">
                                     <input type="text" class="form-control" name="contact-name" placeholder="Your Name" required>
