--- a/index.html
+++ b/index.html
@@ -633,9 +633,9 @@ and Social Media services in Kigali, Rwanda. ">
 
 
         <!--=====================================-->
-        <!--=        Pricing Area Start       	=-->
+        <!--=        TestMoney Area Start       	=-->
         <!--=====================================-->
-        <section class="section bg-color-light section-padding">
+        <!-- <section class="section bg-color-light section-padding">
             <div class="container">
 
                 <section class="section section-padding">
@@ -646,8 +646,7 @@ and Social Media services in Kigali, Rwanda. ">
                             <p>Below are some of the testimonials from our top clients.</p>
                         </div>
 
-                        <!-- this are the testimonies that are hidden -->
-                        <!-- <div class="row">
+                         <div class="row">
                             <div class="col-lg-4" data-sal="slide-up" data-sal-duration="1000" data-sal-delay="100">
                                 <div class="testimonial-grid active">
                                     <span class="social-media"><img src="icon/google-2.png" alt="Yelp"></span>
@@ -694,7 +693,7 @@ and Social Media services in Kigali, Rwanda. ">
                                     </div>
                                 </div>
                             </div>
-                        </div> -->
+                        </div>
                         <h2 style="color: rgb(101, 37, 26) ; text-align: center;">We're Still Building Site. The Clients Reviews Will be Specialized Soon</h2>
 
                     </div>
@@ -707,13 +706,13 @@ and Social Media services in Kigali, Rwanda. ">
                 <li class="shape shape-1"><img src="others/line-1.png" alt="shape"></li>
                 <li class="shape shape-2"><img src="others/bubble-4.png" alt="shape"></li>
             </ul>
-        </section>
+        </section> -->
 
 
 
         <section>
-                        <!-- team start -->
-                        <div id="uni_team" class="uni-team uk-section uk-section-large@m uk-panel uk-overflow-hidden uk-padding-2xlarge-bottom@m">
+                        <!-- Team start Showcase -->
+                        <!-- <div id="uni_team" class="uni-team uk-section uk-section-large@m uk-panel uk-overflow-hidden uk-padding-2xlarge-bottom@m">
                             <div class="uk-container">
                                 <header class="uk-grid-xsmall uk-flex-center uk-flex-middle uk-text-center uk-child-width-auto@m uk-grid" data-uk-grid="" data-anime="opacity:[0, 1]; translateY:[24, 0]; onview: true; delay: 100;">
                                     <div class="uk-panel">
@@ -722,7 +721,7 @@ and Social Media services in Kigali, Rwanda. ">
                                 </header>
 
                                 <h2 style="color: rgb(99, 30, 30) ; text-align: center;">We're Still Building Site. The team Will be Specialized Soon</h2>
-                                <!-- <div class="uk-panel uk-margin-medium-top uk-margin-2xlarge-top@m">
+                                <div class="uk-panel uk-margin-medium-top uk-margin-2xlarge-top@m">
                                     <div class="uk-grid-xsmall uk-grid@m uk-child-width-1-2 uk-child-width-1-3@s uk-child-width-1-5@m uk-grid" data-uk-grid="masonry: true;" data-anime="targets: > * > *; opacity:[0, 1]; translateY:[24, 0]; onview: -400; delay: anime.stagger(100);">
                                         <div>
                                             <div class="uni-artist uk-panel uk-overflow-hidden uk-card uk-card-2xsmall uk-radius-large uk-radius-xlarge@m uk-box-shadow-xsmall dark:uk-background-white-5">
@@ -870,10 +869,10 @@ and Social Media services in Kigali, Rwanda. ">
                                             </div>
                                         </div>
                                     </div>
-                                </div> -->
+                                </div>      
                             </div>
                         </div>
-            
+             -->
                         <!-- team end -->
             
                         <img class="uk-width-2xsmall uk-flex-center uk-margin-auto uk-margin-medium uk-margin-large@m" src="assets/images/divider-01.svg" alt="Divider" data-anime="opacity:[0, 1]; translateY:[24, 0]; onview: true; delay: 100;">
